[package]
edition = "2021"
name = "iptv"
version = "0.1.0"

[dependencies]
serde = {version = "1", features = ["derive"]}
clap = { version = "4", features = ["derive"] }
des = "0.8"
ecb = { version = "0.1", features = ["alloc", "block-padding"] }
hex = "0.4"
md5 = "0.7"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = [
    "cookies",
    "json",
] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
xml-rs = "0.8.19"
actix-web = "4.4.0"
anyhow = "1.0.76"
chrono = "0.4.31"

[profile.release]
opt-level = "z"
lto = true
strip = true
