[package]
edition = "2021"
name = "iptv"
version = "0.1.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
des = "0.8"
ecb = { version = "0.1", features = ["alloc", "block-padding"] }
hex = "0.4"
md5 = "0.7"
rand = "0.8"
regex-lite = "0.1"
reqwest = { git = "https://github.com/yujincheng08/reqwest.git", branch = "set_interface", default-features = false, features = [
    "cookies",
    "json",
] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
] }
xml-rs = "0.8.19"
actix-web = "4.4.0"
anyhow = "1.0.76"
chrono = "0.4.31"
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
retina = { git = "https://github.com/yujincheng08/retina.git", branch = "iptv" }
rtp-rs = "0.6"
tokio-util = { version = "0.7.0", features = ["codec", "net"] }

[target.'cfg(target_os = "windows")'.dependencies]
socket2 = "0.5"

[target.'cfg(not(any(target_os = "android", target_os = "fuchsia", target_os = "linux")))'.dependencies]
local-ip-address = "0.5"

[features]
tls = ["reqwest/native-tls"]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
